Fix layout: Display module content to right of left sidebar
Module content now displays to the right of the left sidebar instead of underneath it.

Changes:
- Moved detailView inside main-layout grid container
- detailView now sibling to overviewView in grid's right column
- Sidebar remains visible and interactive while viewing module details

Result:
- Dashboard displays right of sidebar
- Module details display right of sidebar
- Back button and all content visible
- Sidebar interactions always available

--- a/index.html
+++ b/index.html
@@ -2094,12 +2094,10 @@
                         <!-- Modules will be populated by JavaScript -->
                     </div>
                 </div>
-            </div>
-        </div>
 
-        <!-- Detail View -->
-        <div id="detailView" class="view-container hidden-view">
-            <div class="detail-header">
+                <!-- Detail View (now inside grid right column) -->
+                <div id="detailView" class="view-container hidden-view">
+                    <div class="detail-header">
                 <button class="back-btn" onclick="backToDashboard()">← BACK</button>
                 <div class="detail-title">
                     <span id="detailIcon"></span>
@@ -2166,6 +2164,7 @@
                         </div>
                     </div>
                 </div>
+            </div>
             </div>
         </div>
 
